application/deploy/manifest.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: techkubetest
  name: techkubetest
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: techkubetest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: techkubetest
    spec:
      containers:
        - name: techkubetest
          image: techkubetest:latest
          imagePullPolicy: Always
          resources:
          requests:
            cpu: "300m"
          limits:
            cpu: "300m"
          ports:
          - containerPort: 9090
          volumeMounts:
          - mountPath: /test/config
            name: test-config
      volumes:
       - configMap:
           defaultMode: 420
           name: test-config
         name: test-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: techkubetest
  name: techkubetest
  namespace: default
spec:
  ports:
    - name: techkubetest
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    run: techkubetest
  type: LoadBalancer
  
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: techkubetest
          servicePort: 9090
